--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ h1{
     margin-top: 50px;
     font-family: 'Amatic SC', cursive;
     font-weight: 800;
-    font-size: 150px;
+    font-size: 100px;
     color: #ff6e40;
 }
 #container{
@@ -34,10 +34,11 @@ h1{
     justify-content: flex-end;
 }
 .topic a{
-    font-size: 80px;
+    font-size: 70px;
     text-decoration: none;
     font-family: 'Amatic SC', cursive;
     color: #201e20;
+    align-self: center;
 }
 .topic a:hover{
     text-decoration: underline;
