--- a/general.css
+++ b/general.css
@@ -1,6 +1,6 @@
 .home{
     text-decoration: none;
-    font-family: 'Coming Soon', cursive;
+    font-family: 'Coming Soon', 'Arial';
     color: #ff6e40;
     font-size: 20px;
 }
@@ -9,7 +9,7 @@
 }
 h1{
     text-align: center;
-    font-family: 'Amatic SC', cursive;
+    font-family: 'Amatic SC', 'Arial';
     font-size: 70px;
     margin-top: 0px;
 }
