--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body{
 h1{
     text-align: center;
     margin-top: 50px;
-    font-family: 'Amatic SC', cursive;
+    font-family: 'Amatic SC', 'Arial';
     font-weight: 800;
     font-size: 100px;
     color: #ff6e40;
@@ -36,9 +36,10 @@ h1{
 .topic a{
     font-size: 70px;
     text-decoration: none;
-    font-family: 'Amatic SC', cursive;
+    font-family: 'Amatic SC', 'Arial';
     color: #201e20;
     align-self: center;
+    text-align: right;
 }
 .topic a:hover{
     text-decoration: underline;
@@ -52,7 +53,7 @@ h1{
     justify-content: center;
 }
 .description p{
-    font-family: 'Coming Soon', cursive;
+    font-family: 'Coming Soon', 'Arial';
     font-size: 15px;
     text-transform: uppercase;
     color: black;
@@ -64,6 +65,6 @@ footer{
     margin-bottom: 30px;
     display: flex;
     justify-content: center;
-    font-family: 'Coming Soon', cursive;
+    font-family: 'Coming Soon', 'Arial';
 }
 
