--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,8 @@ h1{
 }
 #container{
     margin-top: 30px;
-
+    margin-bottom: 30px;
+    /* background-color: #ff6e40; */
 }
 #menu{
     list-style: none;
@@ -62,7 +63,8 @@ footer{
     position: absolute;
     bottom: 0;
     width: 100%;
-    margin-bottom: 30px;
+    margin-top: 60px;
+    /* margin-bottom: 0px; */
     display: flex;
     justify-content: center;
     font-family: 'Coming Soon', 'Arial';
