--- a/styles.css
+++ b/styles.css
@@ -2,26 +2,27 @@
     margin: 0;
     padding: 0;
 }
-body{
+html,body{
     background-color: #e5e5dc;
+    height: 100%;
 }
-
 h1{
     text-align: center;
-    margin-top: 50px;
     font-family: 'Amatic SC', 'Arial';
-    font-weight: 800;
-    font-size: 100px;
+    font-size: 8vw;
     color: #ff6e40;
 }
 #container{
-    margin-top: 30px;
-    margin-bottom: 30px;
-    /* background-color: #ff6e40; */
+    /* margin-bottom: 30px; */
+    /* padding-bottom: 50px */
+    padding-top: 15px;
+    min-height: 100%;
 }
 #menu{
+    overflow: auto;
     list-style: none;
     padding-left: 0;
+    padding-bottom: 100px;
 }
 .item{
     display: flex;
@@ -35,17 +36,17 @@ h1{
     justify-content: flex-end;
 }
 .topic a{
-    font-size: 70px;
+    font-size: 5vw;
     text-decoration: none;
     font-family: 'Amatic SC', 'Arial';
     color: #201e20;
     align-self: center;
     text-align: right;
+
 }
 .topic a:hover{
     text-decoration: underline;
 }
-
 .description{
     flex: 1;
     display: flex;
@@ -55,18 +56,19 @@ h1{
 }
 .description p{
     font-family: 'Coming Soon', 'Arial';
-    font-size: 15px;
+    font-size: 0.9vw;
     text-transform: uppercase;
     color: black;
 }
 footer{
-    position: absolute;
-    bottom: 0;
+    position: relative;
+    height: 100px;
+    margin-top: -100px;
     width: 100%;
-    margin-top: 60px;
-    /* margin-bottom: 0px; */
     display: flex;
     justify-content: center;
     font-family: 'Coming Soon', 'Arial';
+    clear: both;
+    padding-top: 40px;
 }
 
