--- a/styles.css
+++ b/styles.css
@@ -15,14 +15,16 @@ h1{
 #container{
     /* margin-bottom: 30px; */
     /* padding-bottom: 50px */
-    padding-top: 15px;
+    /* padding-top: 15px; */
     min-height: 100%;
+    /* background-color: aqua; */
 }
 #menu{
     overflow: auto;
     list-style: none;
     padding-left: 0;
-    padding-bottom: 100px;
+    /* padding-bottom: 100px; */
+    /* background-color: blueviolet; */
 }
 .item{
     display: flex;
@@ -62,13 +64,14 @@ h1{
 }
 footer{
     position: relative;
-    height: 100px;
-    margin-top: -100px;
+    height: 20px;
+    margin-top: -30px;
     width: 100%;
     display: flex;
     justify-content: center;
     font-family: 'Coming Soon', 'Arial';
     clear: both;
-    padding-top: 40px;
+    /* padding-bottom: 100px; */
+    /* background-color: #ff6e40; */
 }
 
