--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ h1{
     overflow: auto;
     list-style: none;
     padding-left: 0;
-    /* padding-bottom: 100px; */
+    padding-bottom: 30px;
     /* background-color: blueviolet; */
 }
 .item{
